# faxfrontend

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  acsite.m4  config.h.in  configure  configure.ac  readme.html
fax4cups/: Makefile.am  Makefile.in  ffe_messagebox.cc  hylafax.in  hylafax.ppd
fax4cups/notes/: INSTALL  printer.conf
ffe/: FaxFrontEnd.cc  FaxFrontEnd.h  FaxFrontEndDsgn.ui  Makefile.am  Makefile.in  RolodexParser.cc  RolodexParser.h  faxstat.cc  faxstat.h  faxstatDsgn.ui  main.cc  rolodex.cc  rolodex.h  rolodexDsgn.ui
